exports[`Component: SearchContainer when the search prop changes should call the search action with the new value 1`] = `
Array [
  "?q=test",
]
`;

exports[`Component: SearchContainer when the search prop changes should call the search action with the new value 2`] = `
Array [
  "?q=foobar",
]
`;

exports[`Component: SearchContainer when the search prop is present should call the search action 1`] = `
Array [
  "?q=test",
]
`;

exports[`Component: SearchContainer when the searchTerm is falsey should not render the pagination or results 1`] = `
<div>
  <form
    onSubmit={[Function]}>
    <label
      htmlFor="searchInput">
      Search for a user
    </label>
    <input
      id="searchInput"
      onChange={[Function]}
      type="text"
      value="" />
    <button
      type="submit">
      Submit
    </button>
  </form>
</div>
`;
